src/projectParser.java
// $ANTLR null D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g 2026-04-27 19:48:25

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class projectParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BOPR", "DEC", "DOUBLE", 
		"Double_type", "ID", "INC", "INT", "Int_type", "Linecomment", "Multiline_comment", 
		"OR", "STRING", "WS", "XOR", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'.'", "'/'", "';'", "'='", "'String'", "'System'", "'else'", "'for'", 
		"'if'", "'out'", "'print'", "'private'", "'public'", "'void'", "'while'", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int AND=4;
	public static final int BOPR=5;
	public static final int DEC=6;
	public static final int DOUBLE=7;
	public static final int Double_type=8;
	public static final int ID=9;
	public static final int INC=10;
	public static final int INT=11;
	public static final int Int_type=12;
	public static final int Linecomment=13;
	public static final int Multiline_comment=14;
	public static final int OR=15;
	public static final int STRING=16;
	public static final int WS=17;
	public static final int XOR=18;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public projectParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public projectParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return projectParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g"; }



	// $ANTLR start "program"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:5:1: program : ( ( statement )+ | quiz );
	public final void program() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:5:9: ( ( statement )+ | quiz )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= Double_type && LA2_0 <= ID)||LA2_0==Int_type||(LA2_0 >= 29 && LA2_0 <= 30)||(LA2_0 >= 32 && LA2_0 <= 33)||(LA2_0 >= 36 && LA2_0 <= 39)) ) {
				alt2=1;
			}
			else if ( (LA2_0==INT) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:5:11: ( statement )+
					{
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:5:11: ( statement )+
					int cnt1=0;
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( ((LA1_0 >= Double_type && LA1_0 <= ID)||LA1_0==Int_type||(LA1_0 >= 29 && LA1_0 <= 30)||(LA1_0 >= 32 && LA1_0 <= 33)||(LA1_0 >= 36 && LA1_0 <= 39)) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:5:12: statement
							{
							pushFollow(FOLLOW_statement_in_program13);
							statement();
							state._fsp--;

							}
							break;

						default :
							if ( cnt1 >= 1 ) break loop1;
							EarlyExitException eee = new EarlyExitException(1, input);
							throw eee;
						}
						cnt1++;
					}

					}
					break;
				case 2 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:5:26: quiz
					{
					pushFollow(FOLLOW_quiz_in_program19);
					quiz();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "quiz"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:7:1: quiz returns [int v] : a= INT ( '+' b= INT | '-' c= INT )* ;
	public final int quiz() throws RecognitionException {
		int v = 0;


		Token a=null;
		Token b=null;
		Token c=null;

		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:8:5: (a= INT ( '+' b= INT | '-' c= INT )* )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:8:7: a= INT ( '+' b= INT | '-' c= INT )*
			{
			a=(Token)match(input,INT,FOLLOW_INT_in_quiz38); 
			 int sum = Integer.parseInt((a!=null?a.getText():null)); 
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:10:7: ( '+' b= INT | '-' c= INT )*
			loop3:
			while (true) {
				int alt3=3;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==22) ) {
					alt3=1;
				}
				else if ( (LA3_0==24) ) {
					alt3=2;
				}

				switch (alt3) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:11:9: '+' b= INT
					{
					match(input,22,FOLLOW_22_in_quiz64); 
					b=(Token)match(input,INT,FOLLOW_INT_in_quiz68); 
					 sum += Integer.parseInt((b!=null?b.getText():null)); 
					}
					break;
				case 2 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:12:9: '-' c= INT
					{
					match(input,24,FOLLOW_24_in_quiz80); 
					c=(Token)match(input,INT,FOLLOW_INT_in_quiz84); 
					 sum -= Integer.parseInt((c!=null?c.getText():null)); 
					}
					break;

				default :
					break loop3;
				}
			}

			 v=sum ; System.out.println(v); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return v;
	}
	// $ANTLR end "quiz"



	// $ANTLR start "statement"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:18:1: statement : ( dec | if_ | while_ | for_loop | func_def | func_call );
	public final void statement() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:18:12: ( dec | if_ | while_ | for_loop | func_def | func_call )
			int alt4=6;
			switch ( input.LA(1) ) {
			case Int_type:
				{
				int LA4_1 = input.LA(2);
				if ( (LA4_1==ID) ) {
					int LA4_10 = input.LA(3);
					if ( (LA4_10==23||(LA4_10 >= 27 && LA4_10 <= 28)) ) {
						alt4=1;
					}
					else if ( (LA4_10==19) ) {
						alt4=5;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case Double_type:
				{
				int LA4_2 = input.LA(2);
				if ( (LA4_2==ID) ) {
					int LA4_11 = input.LA(3);
					if ( (LA4_11==23||(LA4_11 >= 27 && LA4_11 <= 28)) ) {
						alt4=1;
					}
					else if ( (LA4_11==19) ) {
						alt4=5;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 11, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 30:
				{
				alt4=1;
				}
				break;
			case 29:
				{
				int LA4_4 = input.LA(2);
				if ( (LA4_4==ID) ) {
					int LA4_12 = input.LA(3);
					if ( (LA4_12==28) ) {
						alt4=1;
					}
					else if ( (LA4_12==19) ) {
						alt4=5;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 12, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 33:
				{
				alt4=2;
				}
				break;
			case 39:
				{
				alt4=3;
				}
				break;
			case 32:
				{
				alt4=4;
				}
				break;
			case 36:
			case 37:
			case 38:
				{
				alt4=5;
				}
				break;
			case ID:
				{
				alt4=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:18:14: dec
					{
					pushFollow(FOLLOW_dec_in_statement118);
					dec();
					state._fsp--;

					}
					break;
				case 2 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:19:14: if_
					{
					pushFollow(FOLLOW_if__in_statement143);
					if_();
					state._fsp--;

					}
					break;
				case 3 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:20:14: while_
					{
					pushFollow(FOLLOW_while__in_statement168);
					while_();
					state._fsp--;

					}
					break;
				case 4 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:21:14: for_loop
					{
					pushFollow(FOLLOW_for_loop_in_statement190);
					for_loop();
					state._fsp--;

					}
					break;
				case 5 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:22:14: func_def
					{
					pushFollow(FOLLOW_func_def_in_statement210);
					func_def();
					state._fsp--;

					}
					break;
				case 6 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:23:14: func_call
					{
					pushFollow(FOLLOW_func_call_in_statement230);
					func_call();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statement"



	// $ANTLR start "dec"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:1: dec : ( dec1 | dec2 | dec3 | dec4 | sOUT | string_dec );
	public final void dec() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:12: ( dec1 | dec2 | dec3 | dec4 | sOUT | string_dec )
			int alt5=6;
			switch ( input.LA(1) ) {
			case Int_type:
				{
				int LA5_1 = input.LA(2);
				if ( (LA5_1==ID) ) {
					int LA5_5 = input.LA(3);
					if ( (LA5_5==28) ) {
						int LA5_7 = input.LA(4);
						if ( (LA5_7==INT) ) {
							alt5=1;
						}
						else if ( (LA5_7==ID) ) {
							alt5=4;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 5, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}
					else if ( (LA5_5==23||LA5_5==27) ) {
						alt5=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 5, 5, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case Double_type:
				{
				int LA5_2 = input.LA(2);
				if ( (LA5_2==ID) ) {
					int LA5_6 = input.LA(3);
					if ( (LA5_6==28) ) {
						int LA5_9 = input.LA(4);
						if ( (LA5_9==DOUBLE) ) {
							alt5=2;
						}
						else if ( (LA5_9==ID) ) {
							alt5=4;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 5, 9, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}
					else if ( (LA5_6==23||LA5_6==27) ) {
						alt5=3;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 5, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 30:
				{
				alt5=5;
				}
				break;
			case 29:
				{
				alt5=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:14: dec1
					{
					pushFollow(FOLLOW_dec1_in_dec263);
					dec1();
					state._fsp--;

					}
					break;
				case 2 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:21: dec2
					{
					pushFollow(FOLLOW_dec2_in_dec267);
					dec2();
					state._fsp--;

					}
					break;
				case 3 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:28: dec3
					{
					pushFollow(FOLLOW_dec3_in_dec271);
					dec3();
					state._fsp--;

					}
					break;
				case 4 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:35: dec4
					{
					pushFollow(FOLLOW_dec4_in_dec275);
					dec4();
					state._fsp--;

					}
					break;
				case 5 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:42: sOUT
					{
					pushFollow(FOLLOW_sOUT_in_dec279);
					sOUT();
					state._fsp--;

					}
					break;
				case 6 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:28:49: string_dec
					{
					pushFollow(FOLLOW_string_dec_in_dec283);
					string_dec();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dec"



	// $ANTLR start "dec1"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:31:1: dec1 : Int_type ID '=' INT ';' ;
	public final void dec1() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:31:12: ( Int_type ID '=' INT ';' )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:31:14: Int_type ID '=' INT ';'
			{
			match(input,Int_type,FOLLOW_Int_type_in_dec1299); 
			match(input,ID,FOLLOW_ID_in_dec1301); 
			match(input,28,FOLLOW_28_in_dec1303); 
			match(input,INT,FOLLOW_INT_in_dec1305); 
			match(input,27,FOLLOW_27_in_dec1307); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dec1"



	// $ANTLR start "dec2"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:34:1: dec2 : Double_type ID '=' DOUBLE ';' ;
	public final void dec2() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:34:12: ( Double_type ID '=' DOUBLE ';' )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:34:14: Double_type ID '=' DOUBLE ';'
			{
			match(input,Double_type,FOLLOW_Double_type_in_dec2323); 
			match(input,ID,FOLLOW_ID_in_dec2325); 
			match(input,28,FOLLOW_28_in_dec2327); 
			match(input,DOUBLE,FOLLOW_DOUBLE_in_dec2329); 
			match(input,27,FOLLOW_27_in_dec2331); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dec2"



	// $ANTLR start "dec3"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:37:1: dec3 : ( Int_type | Double_type ) ID ( ',' ID )* ';' ;
	public final void dec3() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:37:12: ( ( Int_type | Double_type ) ID ( ',' ID )* ';' )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:37:14: ( Int_type | Double_type ) ID ( ',' ID )* ';'
			{
			if ( input.LA(1)==Double_type||input.LA(1)==Int_type ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,ID,FOLLOW_ID_in_dec3355); 
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:37:42: ( ',' ID )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==23) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:37:43: ',' ID
					{
					match(input,23,FOLLOW_23_in_dec3358); 
					match(input,ID,FOLLOW_ID_in_dec3360); 
					}
					break;

				default :
					break loop6;
				}
			}

			match(input,27,FOLLOW_27_in_dec3364); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dec3"



	// $ANTLR start "dec4"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:40:1: dec4 : ( Int_type | Double_type ) ID '=' ID ( ( '+' | '-' | '*' | '/' ) ID )* ';' ;
	public final void dec4() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:40:12: ( ( Int_type | Double_type ) ID '=' ID ( ( '+' | '-' | '*' | '/' ) ID )* ';' )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:40:14: ( Int_type | Double_type ) ID '=' ID ( ( '+' | '-' | '*' | '/' ) ID )* ';'
			{
			if ( input.LA(1)==Double_type||input.LA(1)==Int_type ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,ID,FOLLOW_ID_in_dec4388); 
			match(input,28,FOLLOW_28_in_dec4390); 
			match(input,ID,FOLLOW_ID_in_dec4392); 
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:40:49: ( ( '+' | '-' | '*' | '/' ) ID )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( ((LA7_0 >= 21 && LA7_0 <= 22)||LA7_0==24||LA7_0==26) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:40:50: ( '+' | '-' | '*' | '/' ) ID
					{
					if ( (input.LA(1) >= 21 && input.LA(1) <= 22)||input.LA(1)==24||input.LA(1)==26 ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					match(input,ID,FOLLOW_ID_in_dec4411); 
					}
					break;

				default :
					break loop7;
				}
			}

			match(input,27,FOLLOW_27_in_dec4415); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dec4"



	// $ANTLR start "if_"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:45:1: if_ : 'if' '(' c= logical_cond ')' '{' ( statement )* '}' ( else_ )? ;
	public final void if_() throws RecognitionException {
		boolean c =false;

		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:46:5: ( 'if' '(' c= logical_cond ')' '{' ( statement )* '}' ( else_ )? )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:46:7: 'if' '(' c= logical_cond ')' '{' ( statement )* '}' ( else_ )?
			{
			match(input,33,FOLLOW_33_in_if_431); 
			match(input,19,FOLLOW_19_in_if_433); 
			pushFollow(FOLLOW_logical_cond_in_if_437);
			c=logical_cond();
			state._fsp--;

			match(input,20,FOLLOW_20_in_if_439); 
			match(input,40,FOLLOW_40_in_if_441); 
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:46:39: ( statement )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( ((LA8_0 >= Double_type && LA8_0 <= ID)||LA8_0==Int_type||(LA8_0 >= 29 && LA8_0 <= 30)||(LA8_0 >= 32 && LA8_0 <= 33)||(LA8_0 >= 36 && LA8_0 <= 39)) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:46:39: statement
					{
					pushFollow(FOLLOW_statement_in_if_443);
					statement();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			match(input,41,FOLLOW_41_in_if_446); 
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:46:54: ( else_ )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==31) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:46:55: else_
					{
					pushFollow(FOLLOW_else__in_if_449);
					else_();
					state._fsp--;

					}
					break;

			}


			          if (c){
			       		System.out.println("a7a");
			       	  }else{
			          	System.out.println("7ankresha");
			          }
			      
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "if_"



	// $ANTLR start "else_"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:57:1: else_ : 'else' '{' ( statement )* '}' ;
	public final void else_() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:57:12: ( 'else' '{' ( statement )* '}' )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:57:14: 'else' '{' ( statement )* '}'
			{
			match(input,31,FOLLOW_31_in_else_478); 
			match(input,40,FOLLOW_40_in_else_480); 
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:57:25: ( statement )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( ((LA10_0 >= Double_type && LA10_0 <= ID)||LA10_0==Int_type||(LA10_0 >= 29 && LA10_0 <= 30)||(LA10_0 >= 32 && LA10_0 <= 33)||(LA10_0 >= 36 && LA10_0 <= 39)) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:57:25: statement
					{
					pushFollow(FOLLOW_statement_in_else_482);
					statement();
					state._fsp--;

					}
					break;

				default :
					break loop10;
				}
			}

			match(input,41,FOLLOW_41_in_else_485); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "else_"



	// $ANTLR start "while_"
	// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:60:1: while_ : 'while' '(' logical_cond ')' '{' ( statement )* '}' ;
	public final void while_() throws RecognitionException {
		try {
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:60:12: ( 'while' '(' logical_cond ')' '{' ( statement )* '}' )
			// D:\\university\\term 8\\407\\lab\\el project\\src\\grammer\\project.g:60:14: 'while' '(' logical_cond ')' '{' ( statement )* '}'
			{
			match(input,39,FOLLOW_39_in_while_499); 
			match(input,19,FOLLOW_19_in_while_501); 
			pushFollow(FOLLOW_logical_cond_in_while_503);
			logical_cond();
			state._fsp--;
